Fix misspelling -- m_releaseNetwrokActivityTimer --> m_releaseNetworkActivityTimer https://bugs.webkit.org/show_bug.cgi?id=212237

Patch by Tyler Wilcock <twilco.o@protonmail.com> on 2020-05-21
Reviewed by Simon Fraser.

No new tests required -- simply fixing a misspelling.

* UIProcess/Cocoa/NavigationState.h: Rename m_releaseNetwrokActivityTimer to m_releaseNetworkActivityTimer
* UIProcess/Cocoa/NavigationState.mm: Rename m_releaseNetwrokActivityTimer to m_releaseNetworkActivityTimer
(WebKit::NavigationState::NavigationState):
(WebKit::NavigationState::releaseNetworkActivity):
(WebKit::NavigationState::didChangeIsLoading):

Canonical link: https://commits.webkit.org/225105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262037 268f45cc-cd09-0410-ab3c-d52691b4dbfc